src/Parser.output
Terminals unused in grammar

    SIZEOF
    PTR_OP
    LEFT_OP
    RIGHT_OP
    LEFT_ASSIGN
    RIGHT_ASSIGN
    AND_ASSIGN
    XOR_ASSIGN
    OR_ASSIGN
    TYPEDEF
    EXTERN
    STATIC
    AUTO
    REGISTER
    CONST
    VOLATILE
    STRUCT
    UNION
    ENUM
    ELLIPSIS
    CASE
    DEFAULT
    SWITCH
    GOTO
    CONTINUE
    BREAK


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 declaration_list: declaration
    7                 | declaration_list declaration

    8 declaration: declaration_specifiers init_declarator ';'

    9 init_declarator: declarator
   10                | declarator '=' assignment_expression

   11 function_definition: declaration_specifiers declarator compound_statement

   12 declaration_specifiers: type_specifier

   13 type_specifier: VOID
   14               | CHAR
   15               | SHORT
   16               | INT
   17               | LONG
   18               | FLOAT
   19               | DOUBLE
   20               | SIGNED
   21               | UNSIGNED
   22               | TYPE_NAME

   23 declarator: direct_declarator

   24 direct_declarator: IDENTIFIER
   25                  | '(' declarator ')'
   26                  | direct_declarator '(' parameter_list ')'
   27                  | direct_declarator '(' ')'

   28 parameter_list: parameter_declaration
   29               | parameter_list ',' parameter_declaration

   30 parameter_declaration: declaration_specifiers declarator
   31                      | declaration_specifiers

   32 compound_statement: '{' '}'
   33                   | '{' statement_list '}'
   34                   | '{' declaration_list statement_list '}'
   35                   | '{' declaration_list '}'

   36 statement_list: statement
   37               | statement_list statement

   38 statement: jump_statement
   39          | expression_statement
   40          | compound_statement
   41          | selection_statement
   42          | iteration_statement

   43 jump_statement: RETURN expression ';'

   44 expression_statement: ';'
   45                     | expression ';'

   46 selection_statement: IF '(' expression ')' statement
   47                    | IF '(' expression ')' statement ELSE statement

   48 iteration_statement: WHILE '(' expression ')' statement
   49                    | DO statement WHILE '(' expression ')' ';'
   50                    | FOR '(' expression_statement expression_statement ')' statement
   51                    | FOR '(' expression_statement expression_statement expression ')' statement

   52 expression: assignment_expression

   53 postfix_expression: primary_expression
   54                   | postfix_expression '(' ')'
   55                   | postfix_expression '(' argument_expression_list ')'
   56                   | postfix_expression INC_OP
   57                   | postfix_expression DEC_OP

   58 argument_expression_list: assignment_expression
   59                         | argument_expression_list ',' assignment_expression

   60 unary_expression: postfix_expression
   61                 | INC_OP unary_expression
   62                 | DEC_OP unary_expression

   63 multiplicative_expression: unary_expression
   64                          | multiplicative_expression '*' unary_expression
   65                          | multiplicative_expression '/' unary_expression

   66 additive_expression: multiplicative_expression
   67                    | additive_expression '+' multiplicative_expression
   68                    | additive_expression '-' multiplicative_expression

   69 relational_expression: additive_expression
   70                      | relational_expression '<' additive_expression
   71                      | relational_expression '>' additive_expression
   72                      | relational_expression LE_OP additive_expression
   73                      | relational_expression GE_OP additive_expression

   74 equality_expression: relational_expression
   75                    | equality_expression EQ_OP relational_expression
   76                    | equality_expression NE_OP relational_expression

   77 and_expression: equality_expression
   78               | and_expression '&' equality_expression

   79 exclusive_or_expression: and_expression
   80                        | exclusive_or_expression '^' and_expression

   81 inclusive_or_expression: exclusive_or_expression
   82                        | inclusive_or_expression '|' exclusive_or_expression

   83 logical_and_expression: inclusive_or_expression
   84                       | logical_and_expression AND_OP inclusive_or_expression

   85 logical_or_expression: logical_and_expression
   86                      | logical_or_expression OR_OP logical_and_expression

   87 assignment_expression: logical_or_expression
   88                      | unary_expression assignment_operator assignment_expression

   89 primary_expression: IDENTIFIER
   90                   | CONSTANT
   91                   | STRING_LITERAL
   92                   | '(' expression ')'

   93 assignment_operator: '='
   94                    | MUL_ASSIGN
   95                    | DIV_ASSIGN
   96                    | MOD_ASSIGN
   97                    | ADD_ASSIGN
   98                    | SUB_ASSIGN


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 78
    '(' (40) 25 26 27 46 47 48 49 50 51 54 55 92
    ')' (41) 25 26 27 46 47 48 49 50 51 54 55 92
    '*' (42) 64
    '+' (43) 67
    ',' (44) 29 59
    '-' (45) 68
    '/' (47) 65
    ';' (59) 8 43 44 45 49
    '<' (60) 70
    '=' (61) 10 93
    '>' (62) 71
    '^' (94) 80
    '{' (123) 32 33 34 35
    '|' (124) 82
    '}' (125) 32 33 34 35
    error (256)
    SIZEOF (258)
    PTR_OP (259)
    INC_OP (260) 56 61
    DEC_OP (261) 57 62
    LEFT_OP (262)
    RIGHT_OP (263)
    LE_OP (264) 72
    GE_OP (265) 73
    EQ_OP (266) 75
    NE_OP (267) 76
    AND_OP (268) 84
    OR_OP (269) 86
    LEFT_ASSIGN (270)
    RIGHT_ASSIGN (271)
    AND_ASSIGN (272)
    XOR_ASSIGN (273)
    OR_ASSIGN (274)
    TYPEDEF (275)
    EXTERN (276)
    STATIC (277)
    AUTO (278)
    REGISTER (279)
    CONST (280)
    VOLATILE (281)
    STRUCT (282)
    UNION (283)
    ENUM (284)
    ELLIPSIS (285)
    CASE (286)
    DEFAULT (287)
    IF (288) 46 47
    ELSE (289) 47
    SWITCH (290)
    WHILE (291) 48 49
    DO (292) 49
    FOR (293) 50 51
    GOTO (294)
    CONTINUE (295)
    BREAK (296)
    MUL_ASSIGN <string> (297) 94
    DIV_ASSIGN <string> (298) 95
    MOD_ASSIGN <string> (299) 96
    ADD_ASSIGN <string> (300) 97
    SUB_ASSIGN <string> (301) 98
    IDENTIFIER <string> (302) 24 89
    CONSTANT <string> (303) 90
    STRING_LITERAL <string> (304) 91
    CHAR <string> (305) 14
    SHORT <string> (306) 15
    INT <string> (307) 16
    LONG <string> (308) 17
    SIGNED <string> (309) 20
    UNSIGNED <string> (310) 21
    FLOAT <string> (311) 18
    DOUBLE <string> (312) 19
    VOID <string> (313) 13
    TYPE_NAME <string> (314) 22
    RETURN <string> (315) 43
    LOWER_THAN_ELSE (316)


Nonterminals, with rules where they appear

    $accept (78)
        on left: 0
    ROOT (79)
        on left: 1
        on right: 0
    translation_unit <block> (80)
        on left: 2 3
        on right: 1 3
    external_declaration <block> (81)
        on left: 4 5
        on right: 2 3
    declaration_list <list> (82)
        on left: 6 7
        on right: 7 34 35
    declaration <block> (83)
        on left: 8
        on right: 5 6 7
    init_declarator <block> (84)
        on left: 9 10
        on right: 8
    function_definition <block> (85)
        on left: 11
        on right: 4
    declaration_specifiers <string> (86)
        on left: 12
        on right: 8 11 30 31
    type_specifier <string> (87)
        on left: 13 14 15 16 17 18 19 20 21 22
        on right: 12
    declarator <block> (88)
        on left: 23
        on right: 9 10 11 25 30
    direct_declarator <block> (89)
        on left: 24 25 26 27
        on right: 23 26 27
    parameter_list <list> (90)
        on left: 28 29
        on right: 26 29
    parameter_declaration <block> (91)
        on left: 30 31
        on right: 28 29
    compound_statement <block> (92)
        on left: 32 33 34 35
        on right: 11 40
    statement_list <list> (93)
        on left: 36 37
        on right: 33 34 37
    statement <block> (94)
        on left: 38 39 40 41 42
        on right: 36 37 46 47 48 49 50 51
    jump_statement <block> (95)
        on left: 43
        on right: 38
    expression_statement <block> (96)
        on left: 44 45
        on right: 39 50 51
    selection_statement <block> (97)
        on left: 46 47
        on right: 41
    iteration_statement <block> (98)
        on left: 48 49 50 51
        on right: 42
    expression <block> (99)
        on left: 52
        on right: 43 45 46 47 48 49 51 92
    postfix_expression <block> (100)
        on left: 53 54 55 56 57
        on right: 54 55 56 57 60
    argument_expression_list <list> (101)
        on left: 58 59
        on right: 55 59
    unary_expression <block> (102)
        on left: 60 61 62
        on right: 61 62 63 64 65 88
    multiplicative_expression <block> (103)
        on left: 63 64 65
        on right: 64 65 66 67 68
    additive_expression <block> (104)
        on left: 66 67 68
        on right: 67 68 69 70 71 72 73
    relational_expression <block> (105)
        on left: 69 70 71 72 73
        on right: 70 71 72 73 74 75 76
    equality_expression <block> (106)
        on left: 74 75 76
        on right: 75 76 77 78
    and_expression <block> (107)
        on left: 77 78
        on right: 78 79 80
    exclusive_or_expression <block> (108)
        on left: 79 80
        on right: 80 81 82
    inclusive_or_expression <block> (109)
        on left: 81 82
        on right: 82 83 84
    logical_and_expression <block> (110)
        on left: 83 84
        on right: 84 85 86
    logical_or_expression <block> (111)
        on left: 85 86
        on right: 86 87
    assignment_expression <block> (112)
        on left: 87 88
        on right: 10 52 58 59 88
    primary_expression <block> (113)
        on left: 89 90 91 92
        on right: 53
    assignment_operator <string> (114)
        on left: 93 94 95 96 97 98
        on right: 88


State 0

    0 $accept: . ROOT $end

    CHAR       shift, and go to state 1
    SHORT      shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    SIGNED     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    FLOAT      shift, and go to state 7
    DOUBLE     shift, and go to state 8
    VOID       shift, and go to state 9
    TYPE_NAME  shift, and go to state 10

    ROOT                    go to state 11
    translation_unit        go to state 12
    external_declaration    go to state 13
    declaration             go to state 14
    function_definition     go to state 15
    declaration_specifiers  go to state 16
    type_specifier          go to state 17


State 1

   14 type_specifier: CHAR .

    $default  reduce using rule 14 (type_specifier)


State 2

   15 type_specifier: SHORT .

    $default  reduce using rule 15 (type_specifier)


State 3

   16 type_specifier: INT .

    $default  reduce using rule 16 (type_specifier)


State 4

   17 type_specifier: LONG .

    $default  reduce using rule 17 (type_specifier)


State 5

   20 type_specifier: SIGNED .

    $default  reduce using rule 20 (type_specifier)


State 6

   21 type_specifier: UNSIGNED .

    $default  reduce using rule 21 (type_specifier)


State 7

   18 type_specifier: FLOAT .

    $default  reduce using rule 18 (type_specifier)


State 8

   19 type_specifier: DOUBLE .

    $default  reduce using rule 19 (type_specifier)


State 9

   13 type_specifier: VOID .

    $default  reduce using rule 13 (type_specifier)


State 10

   22 type_specifier: TYPE_NAME .

    $default  reduce using rule 22 (type_specifier)


State 11

    0 $accept: ROOT . $end

    $end  shift, and go to state 18


State 12

    1 ROOT: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    CHAR       shift, and go to state 1
    SHORT      shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    SIGNED     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    FLOAT      shift, and go to state 7
    DOUBLE     shift, and go to state 8
    VOID       shift, and go to state 9
    TYPE_NAME  shift, and go to state 10

    $default  reduce using rule 1 (ROOT)

    external_declaration    go to state 19
    declaration             go to state 14
    function_definition     go to state 15
    declaration_specifiers  go to state 16
    type_specifier          go to state 17


State 13

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 14

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 15

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 16

    8 declaration: declaration_specifiers . init_declarator ';'
   11 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 21

    init_declarator    go to state 22
    declarator         go to state 23
    direct_declarator  go to state 24


State 17

   12 declaration_specifiers: type_specifier .

    $default  reduce using rule 12 (declaration_specifiers)


State 18

    0 $accept: ROOT $end .

    $default  accept


State 19

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 20

   24 direct_declarator: IDENTIFIER .

    $default  reduce using rule 24 (direct_declarator)


State 21

   25 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 21

    declarator         go to state 25
    direct_declarator  go to state 24


State 22

    8 declaration: declaration_specifiers init_declarator . ';'

    ';'  shift, and go to state 26


State 23

    9 init_declarator: declarator .
   10                | declarator . '=' assignment_expression
   11 function_definition: declaration_specifiers declarator . compound_statement

    '='  shift, and go to state 27
    '{'  shift, and go to state 28

    $default  reduce using rule 9 (init_declarator)

    compound_statement  go to state 29


State 24

   23 declarator: direct_declarator .
   26 direct_declarator: direct_declarator . '(' parameter_list ')'
   27                  | direct_declarator . '(' ')'

    '('  shift, and go to state 30

    $default  reduce using rule 23 (declarator)


State 25

   25 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 31


State 26

    8 declaration: declaration_specifiers init_declarator ';' .

    $default  reduce using rule 8 (declaration)


State 27

   10 init_declarator: declarator '=' . assignment_expression

    INC_OP          shift, and go to state 32
    DEC_OP          shift, and go to state 33
    IDENTIFIER      shift, and go to state 34
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 37

    postfix_expression         go to state 38
    unary_expression           go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_expression             go to state 44
    exclusive_or_expression    go to state 45
    inclusive_or_expression    go to state 46
    logical_and_expression     go to state 47
    logical_or_expression      go to state 48
    assignment_expression      go to state 49
    primary_expression         go to state 50


State 28

   32 compound_statement: '{' . '}'
   33                   | '{' . statement_list '}'
   34                   | '{' . declaration_list statement_list '}'
   35                   | '{' . declaration_list '}'

    INC_OP          shift, and go to state 32
    DEC_OP          shift, and go to state 33
    IF              shift, and go to state 51
    WHILE           shift, and go to state 52
    DO              shift, and go to state 53
    FOR             shift, and go to state 54
    IDENTIFIER      shift, and go to state 34
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    CHAR            shift, and go to state 1
    SHORT           shift, and go to state 2
    INT             shift, and go to state 3
    LONG            shift, and go to state 4
    SIGNED          shift, and go to state 5
    UNSIGNED        shift, and go to state 6
    FLOAT           shift, and go to state 7
    DOUBLE          shift, and go to state 8
    VOID            shift, and go to state 9
    TYPE_NAME       shift, and go to state 10
    RETURN          shift, and go to state 55
    ';'             shift, and go to state 56
    '('             shift, and go to state 37
    '{'             shift, and go to state 28
    '}'             shift, and go to state 57

    declaration_list           go to state 58
    declaration                go to state 59
    declaration_specifiers     go to state 60
    type_specifier             go to state 17
    compound_statement         go to state 61
    statement_list             go to state 62
    statement                  go to state 63
    jump_statement             go to state 64
    expression_statement       go to state 65
    selection_statement        go to state 66
    iteration_statement        go to state 67
    expression                 go to state 68
    postfix_expression         go to state 38
    unary_expression           go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_expression             go to state 44
    exclusive_or_expression    go to state 45
    inclusive_or_expression    go to state 46
    logical_and_expression     go to state 47
    logical_or_expression      go to state 48
    assignment_expression      go to state 69
    primary_expression         go to state 50


State 29

   11 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 11 (function_definition)


State 30

   26 direct_declarator: direct_declarator '(' . parameter_list ')'
   27                  | direct_declarator '(' . ')'

    CHAR       shift, and go to state 1
    SHORT      shift, and go to state 2
    INT        shift, and go to state 3
    LONG       shift, and go to state 4
    SIGNED     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    FLOAT      shift, and go to state 7
    DOUBLE     shift, and go to state 8
    VOID       shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    ')'        shift, and go to state 70

    declaration_specifiers  go to state 71
    type_specifier          go to state 17
    parameter_list          go to state 72
    parameter_declaration   go to state 73


State 31

   25 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 25 (direct_declarator)


State 32

   61 unary_expression: INC_OP . unary_expression

    INC_OP          shift, and go to state 32
    DEC_OP          shift, and go to state 33
    IDENTIFIER      shift, and go to state 34
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 37

    postfix_expression  go to state 38
    unary_expression    go to state 74
    primary_expression  go to state 50


State 33

   62 unary_expression: DEC_OP . unary_expression

    INC_OP          shift, and go to state 32
    DEC_OP          shift, and go to state 33
    IDENTIFIER      shift, and go to state 34
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 37

    postfix_expression  go to state 38
    unary_expression    go to state 75
    primary_expression  go to state 50


State 34

   89 primary_expression: IDENTIFIER .

    $default  reduce using rule 89 (primary_expression)


State 35

   90 primary_expression: CONSTANT .

    $default  reduce using rule 90 (primary_expression)


State 36

   91 primary_expression: STRING_LITERAL .

    $default  reduce using rule 91 (primary_expression)


State 37

   92 primary_expression: '(' . expression ')'

    INC_OP          shift, and go to state 32
    DEC_OP          shift, and go to state 33
    IDENTIFIER      shift, and go to state 34
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 37
